@@ -1,6 +1,6 @@
-Date: 2025-12-28
+Date: 2026-01-05
 Package: CHNOSZ
-Version: 2.2.0-13
+Version: 2.2.0-14
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
